# actix-yew-docker

./: Cargo.toml  Dockerfile  index.html
src/: lib.rs  main.rs  style.css
src/components/: main_title.rs
src/components/atoms/: main_title.rs
