[package]
name = "actix-yew-docker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = "4.0.1"
yew = "0.19.3"
gloo = "0.7.0"
serde = "1.0.137"
serde_json = "1.0.81"
stylist = { version = "0.10.1", features = [ "yew" ]}
